--- a/package.json
+++ b/package.json
@@ -42,8 +42,12 @@
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
+    "@storybook/addon-viewport": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.0.0",
-    "@storybook/react": "^5.3.19"
+    "@storybook/react": "^5.3.19",
+    "eslint": "^7.1.0",
+    "eslint-plugin-react": "^7.20.0",
+    "prettier": "2.0.5"
   }
 }
