--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.5.8",
-    "mongoose": "^5.9.16"
+    "mongodb": "^3.5.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
     "eslint": "^7.1.0",
     "eslint-plugin-react": "^7.20.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
     "prettier": "2.0.5"
   },
   "scripts": {
