--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.5.8"
+    "mongodb": "^3.5.8",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^7.1.0",
