--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,6 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.0.0",
     "@storybook/react": "^5.3.19"
-
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
