--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
+    "moment": "^2.26.0",
     "mongodb": "^3.5.8",
     "multer": "^1.4.2"
   },
